re PR tree-optimization/22269 (ICE in tree-ssa-reassoc with uninitialized variables)

2005-07-01  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-opt/22269
        * tree-ssa-reassoc.c (should_transpose): Fix which operand
        we check for SSA_NAME for.

2005-07-01  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-opt/22269
        * gcc.c-torture/compile/pr22269.c: New test.

From-SVN: r101519